--- a/page12.html
+++ b/page12.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section id="ext_menu-3a" data-rv-view="129">
+<section id="ext_menu-3a" data-rv-view="138">
 
     <nav class="navbar navbar-dropdown">
         <div class="container">
@@ -34,17 +34,17 @@
 
                     <div class="navbar-brand">
                         <a href="index.html" class="mbri-speed mbr-iconfont mbr-iconfont-menu navbar-logo"></a>
-                        <a class="navbar-caption text-white" href="index.html" target="_blank">高雄・休修臉・美學&nbsp;</a>
+                        <a class="navbar-caption" href="https://mobirise.com">fixxface</a>
                     </div>
 
                 </div>
                 <div class="mbr-table-cell">
 
-                    <button class="navbar-toggler pull-xs-right hidden-md-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
+                    <button class="navbar-toggler pull-xs-right" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="menu.html" target="_blank" data-toggle="dropdown-submenu" aria-expanded="false">服務項目</a></li><li class="nav-item"><a class="nav-link link" href="https://line.me/R/ti/p/%40llr0044b" target="_blank">LINE ME</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-xl" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">OVERVIEW</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">FEATURES</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">HELP</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/g">how to create your own website for free</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-3b" data-rv-view="131" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.co/k">bootstrap template</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-3b" data-rv-view="140" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -68,7 +68,7 @@
     </div>
 </section>
 
-<section class="mbr-cards mbr-section mbr-section-nopadding" id="features1-3f" data-rv-view="133" style="background-color: rgb(255, 255, 255);">
+<section class="mbr-cards mbr-section mbr-section-nopadding" id="features1-3f" data-rv-view="142" style="background-color: rgb(255, 255, 255);">
 
         
 
@@ -119,7 +119,7 @@
     </div>
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-4z" data-rv-view="136" style="background-color: rgb(34, 34, 34); padding-top: 2.625rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-4z" data-rv-view="145" style="background-color: rgb(34, 34, 34); padding-top: 2.625rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>- 高雄 休修臉 美學 -<br><br></p>
