--- a/page18.html
+++ b/page18.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section id="ext_menu-64" data-rv-view="275">
+<section id="ext_menu-64" data-rv-view="284">
 
     <nav class="navbar navbar-dropdown">
         <div class="container">
@@ -34,17 +34,17 @@
 
                     <div class="navbar-brand">
                         <a href="index.html" class="mbri-speed mbr-iconfont mbr-iconfont-menu navbar-logo"></a>
-                        <a class="navbar-caption text-white" href="index.html" target="_blank">高雄・休修臉・美學&nbsp;</a>
+                        <a class="navbar-caption" href="https://mobirise.com">fixxface</a>
                     </div>
 
                 </div>
                 <div class="mbr-table-cell">
 
-                    <button class="navbar-toggler pull-xs-right hidden-md-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
+                    <button class="navbar-toggler pull-xs-right" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="menu.html" target="_blank" data-toggle="dropdown-submenu" aria-expanded="false">服務項目</a></li><li class="nav-item"><a class="nav-link link" href="https://line.me/R/ti/p/%40llr0044b" target="_blank">LINE ME</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-xl" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">OVERVIEW</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">FEATURES</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">HELP</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/g">create your own website</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box3-6k" data-rv-view="272" style="background-color: rgb(242, 242, 242); padding-top: 200px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.co/i">how to build your own website</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box3-6k" data-rv-view="281" style="background-color: rgb(242, 242, 242); padding-top: 200px; padding-bottom: 120px;">
 
     
     <div class="container">
