--- a/page19.html
+++ b/page19.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section id="ext_menu-6m" data-rv-view="277">
+<section id="ext_menu-6m" data-rv-view="286">
 
     <nav class="navbar navbar-dropdown">
         <div class="container">
@@ -34,17 +34,17 @@
 
                     <div class="navbar-brand">
                         <a href="index.html" class="mbri-speed mbr-iconfont mbr-iconfont-menu navbar-logo"></a>
-                        <a class="navbar-caption text-white" href="index.html" target="_blank">高雄・休修臉・美學&nbsp;</a>
+                        <a class="navbar-caption" href="https://mobirise.com">fixxface</a>
                     </div>
 
                 </div>
                 <div class="mbr-table-cell">
 
-                    <button class="navbar-toggler pull-xs-right hidden-md-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
+                    <button class="navbar-toggler pull-xs-right" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="menu.html" target="_blank" data-toggle="dropdown-submenu" aria-expanded="false">服務項目</a></li><li class="nav-item"><a class="nav-link link" href="https://line.me/R/ti/p/%40llr0044b" target="_blank">LINE ME</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-xl" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">OVERVIEW</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">FEATURES</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">HELP</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/c">web site maker</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-6n" data-rv-view="279" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.co/b">free web page creator</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-6n" data-rv-view="288" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -68,7 +68,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6o" data-rv-view="281" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-6o" data-rv-view="290" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -78,7 +78,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6p" data-rv-view="283" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-6p" data-rv-view="292" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -88,7 +88,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6q" data-rv-view="285" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-6q" data-rv-view="294" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -98,7 +98,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6r" data-rv-view="287" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-6r" data-rv-view="296" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -108,7 +108,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6s" data-rv-view="289" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-6s" data-rv-view="298" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -118,7 +118,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6t" data-rv-view="291" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-6t" data-rv-view="300" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -128,7 +128,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6v" data-rv-view="293" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-6v" data-rv-view="302" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -138,7 +138,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6w" data-rv-view="295" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-6w" data-rv-view="304" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -148,7 +148,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-71" data-rv-view="297" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-71" data-rv-view="306" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -165,7 +165,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6x" data-rv-view="299" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-6x" data-rv-view="308" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -175,7 +175,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6y" data-rv-view="301" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-6y" data-rv-view="310" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -185,7 +185,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6z" data-rv-view="303" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-6z" data-rv-view="312" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -195,7 +195,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-70" data-rv-view="305" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-70" data-rv-view="314" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -205,7 +205,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-74" data-rv-view="307" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-74" data-rv-view="316" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
