--- a/news.html
+++ b/news.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section id="ext_menu-5a" data-rv-view="81">
+<section id="ext_menu-5a" data-rv-view="83">
 
     <nav class="navbar navbar-dropdown">
         <div class="container">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/p">bootstrap menu</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-5z" data-rv-view="79" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.co/p">bootstrap dropdown</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-5z" data-rv-view="81" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -68,7 +68,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-7w" data-rv-view="83" style="background-color: rgb(255, 255, 255); padding-top: 60px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article" id="header3-7w" data-rv-view="85" style="background-color: rgb(255, 255, 255); padding-top: 60px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -79,7 +79,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-7v" data-rv-view="87" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 60px;">
+<section class="mbr-section article mbr-section__container" id="content2-7v" data-rv-view="89" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 60px;">
 
     <div class="container">
         <div class="row">
@@ -89,7 +89,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-7x" data-rv-view="89" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-7x" data-rv-view="91" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -99,7 +99,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-4z" data-rv-view="85" style="background-color: rgb(34, 34, 34); padding-top: 2.625rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-4z" data-rv-view="87" style="background-color: rgb(34, 34, 34); padding-top: 2.625rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>- 高雄 休修臉 美學 -<br><br></p>
