--- a/page10.html
+++ b/page10.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section id="ext_menu-5a" data-rv-view="126">
+<section id="ext_menu-5a" data-rv-view="104">
 
     <nav class="navbar navbar-dropdown">
         <div class="container">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/n">bootstrap modal popup</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2n" data-rv-view="128" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.co/l">free bootstrap theme</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2n" data-rv-view="106" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -68,7 +68,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-54" data-rv-view="130" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 0px;">
+<section class="mbr-section article mbr-section__container" id="content2-54" data-rv-view="108" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 0px;">
 
     <div class="container">
         <div class="row">
@@ -78,7 +78,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-55" data-rv-view="132" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-55" data-rv-view="110" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -88,7 +88,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-58" data-rv-view="134" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content2-58" data-rv-view="112" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -98,7 +98,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="buttons1-59" data-rv-view="136" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container" id="buttons1-59" data-rv-view="114" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
