--- a/page9.html
+++ b/page9.html
@@ -22,7 +22,7 @@
   
 </head>
 <body>
-<section class="mbr-section" id="pricing-table2-1w" data-rv-view="123" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 120px;">
+<section class="mbr-section" id="pricing-table2-1w" data-rv-view="59" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 120px;">
 
     
 
@@ -50,7 +50,7 @@
                       <div class="card-text">
                           <div class="mbr-price">
                             <span class="mbr-price-value">單次價$</span>
-                            <span class="mbr-price-figure">1499</span><small class="mbr-price-term">/75min.</small>
+                            <span class="mbr-price-figure">1499</span><small class="mbr-price-term"></small>
                           </div>
                           <small class="mbr-plan-price-desc"></small>
                       </div>
@@ -73,9 +73,9 @@
                       <div class="card-text">
                           <div class="mbr-price">
                             <span class="mbr-price-value">單次價$</span>
-                            <span class="mbr-price-figure">1499</span><small class="mbr-price-term">/（目前停售）</small>
+                            <span class="mbr-price-figure">1500</span><small class="mbr-price-term"></small>
                           </div>
-                          <small class="mbr-plan-price-desc"></small>
+                          <small class="mbr-plan-price-desc">&nbsp;</small>
                       </div>
                     </div>
                     <div class="mbr-plan-body card-block">
@@ -94,7 +94,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/o">bootstrap button</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co/h">how to make your own website</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
