create github pages

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/f">free bootstrap builder</a></section><section class="mbr-section mbr-section-md-padding" id="social-buttons1-aa" data-rv-view="4" style="background-color: rgb(255, 255, 255); padding-top: 30px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.co/j">how to design your own website</a></section><section class="mbr-section mbr-section-md-padding" id="social-buttons1-aa" data-rv-view="4" style="background-color: rgb(255, 255, 255); padding-top: 30px; padding-bottom: 0px;">
     
     <div class="container">
         <div class="row">
@@ -88,7 +88,7 @@
 
 </section>
 
-<section class="mbr-cards mbr-section mbr-section-nopadding mbr-parallax-background" id="features3-1" data-rv-view="12" style="background-image: url(assets/images/s-48341002-960x1119.jpg);">
+<section class="mbr-cards mbr-section mbr-section-nopadding" id="features3-1" data-rv-view="12" style="background-color: rgb(184, 106, 123);">
 
     
 
@@ -252,12 +252,11 @@
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/social-likes/social-likes.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
+  <script src="assets/social-likes/social-likes.js"></script>
   <script src="assets/masonry/masonry.pkgd.min.js"></script>
   <script src="assets/imagesloaded/imagesloaded.pkgd.min.js"></script>
   <script src="assets/bootstrap-carousel-swipe/bootstrap-carousel-swipe.js"></script>
-  <script src="assets/jarallax/jarallax.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/mobirise-gallery/player.min.js"></script>
   <script src="assets/mobirise-gallery/script.js"></script>
