create github pages

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
                     <div class="navbar-brand">
                         <a href="https://mobirise.com" class="icon54-v1-party-ribbon mbr-iconfont mbr-iconfont-menu navbar-logo"></a>
-                        <a class="navbar-caption text-white" href="index.html">fixxface.</a>
+                        <a class="navbar-caption text-white text-primary" href="index.html">fixxface.</a>
                     </div>
 
                 </div>
