--- a/page41.html
+++ b/page41.html
@@ -28,7 +28,7 @@
 </head>
 <body>
   
-  <section id="menu-g4" data-rv-view="752">
+  <section id="menu-g4" data-rv-view="739">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -38,7 +38,7 @@
 
                     <div class="navbar-brand">
                         <a href="https://mobirise.com" class="icon54-v1-party-ribbon mbr-iconfont mbr-iconfont-menu navbar-logo"></a>
-                        <a class="navbar-caption text-white" href="index.html">fixxface.</a>
+                        <a class="navbar-caption text-white text-primary" href="index.html">fixxface.</a>
                     </div>
 
                 </div>
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section-md-padding mbr-footer footer1 mbr-after-navbar" id="contacts1-du" data-rv-view="748" style="background-color: rgb(229, 226, 221); padding-top: 60px; padding-bottom: 90px;">
+<section class="mbr-section mbr-section-md-padding mbr-footer footer1 mbr-after-navbar" id="contacts1-du" data-rv-view="735" style="background-color: rgb(229, 226, 221); padding-top: 60px; padding-bottom: 90px;">
     
     <div class="container">
         <div class="row">
@@ -82,7 +82,7 @@
     </div>
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-dv" data-rv-view="750" style="background-color: rgb(255, 255, 255); padding-top: 0.875rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-dv" data-rv-view="737" style="background-color: rgb(255, 255, 255); padding-top: 0.875rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>- 高雄 休修臉 美學 -<br>since2017<br><br></p>
