--- a/page6.html
+++ b/page6.html
@@ -29,7 +29,7 @@
 </head>
 <body>
   
-  <section id="menu-g4" data-rv-view="85">
+  <section id="menu-g4" data-rv-view="67">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -39,7 +39,7 @@
 
                     <div class="navbar-brand">
                         <a href="https://mobirise.com" class="icon54-v1-party-ribbon mbr-iconfont mbr-iconfont-menu navbar-logo"></a>
-                        <a class="navbar-caption text-white" href="index.html">fixxface.</a>
+                        <a class="navbar-caption text-white text-primary" href="index.html">fixxface.</a>
                     </div>
 
                 </div>
@@ -62,7 +62,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-21" data-rv-view="78" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 40px;">
+<section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-21" data-rv-view="60" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 40px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -73,7 +73,7 @@
     </div>
 </section>
 
-<section class="mbr-cards mbr-section mbr-section-nopadding" id="features7-22" data-rv-view="80" style="background-color: rgb(239, 239, 239);">
+<section class="mbr-cards mbr-section mbr-section-nopadding" id="features7-22" data-rv-view="62" style="background-color: rgb(239, 239, 239);">
 
     
 
@@ -111,7 +111,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-26" data-rv-view="83" style="background-color: rgb(239, 239, 239); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article" id="header3-26" data-rv-view="65" style="background-color: rgb(239, 239, 239); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
