--- a/page7.html
+++ b/page7.html
@@ -28,7 +28,7 @@
 </head>
 <body>
   
-  <section id="menu-g4" data-rv-view="94">
+  <section id="menu-g4" data-rv-view="76">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -38,7 +38,7 @@
 
                     <div class="navbar-brand">
                         <a href="https://mobirise.com" class="icon54-v1-party-ribbon mbr-iconfont mbr-iconfont-menu navbar-logo"></a>
-                        <a class="navbar-caption text-white" href="index.html">fixxface.</a>
+                        <a class="navbar-caption text-white text-primary" href="index.html">fixxface.</a>
                     </div>
 
                 </div>
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="mbr-section mbr-after-navbar" id="pricing-table2-1t" data-rv-view="87" style="padding-top: 40px; padding-bottom: 160px;">
+<section class="mbr-section mbr-after-navbar" id="pricing-table2-1t" data-rv-view="69" style="padding-top: 40px; padding-bottom: 160px;">
 
     
 
@@ -108,7 +108,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-97" data-rv-view="90" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-97" data-rv-view="72" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -118,7 +118,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-8e" data-rv-view="92" style="background-color: rgb(255, 255, 255); padding-top: 0.875rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-8e" data-rv-view="74" style="background-color: rgb(255, 255, 255); padding-top: 0.875rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>- 高雄 休修臉 美學 -<br>since2017<br><br></p>
