--- a/page9.html
+++ b/page9.html
@@ -28,7 +28,7 @@
 </head>
 <body>
   
-  <section id="menu-g4" data-rv-view="104">
+  <section id="menu-g4" data-rv-view="86">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -38,7 +38,7 @@
 
                     <div class="navbar-brand">
                         <a href="https://mobirise.com" class="icon54-v1-party-ribbon mbr-iconfont mbr-iconfont-menu navbar-logo"></a>
-                        <a class="navbar-caption text-white" href="index.html">fixxface.</a>
+                        <a class="navbar-caption text-white text-primary" href="index.html">fixxface.</a>
                     </div>
 
                 </div>
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="mbr-section mbr-after-navbar" id="pricing-table2-1w" data-rv-view="101" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 120px;">
+<section class="mbr-section mbr-after-navbar" id="pricing-table2-1w" data-rv-view="83" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 120px;">
 
     
 
