--- a/page28.html
+++ b/page28.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
   <link rel="stylesheet" href="assets/et-line-font-plugin/style.css">
+  <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/icon54/style.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -30,9 +31,42 @@
 </head>
 <body>
   
-  <section id="menu-g4" data-rv-view="448">
+  <section id="ext_menu-9e" data-rv-view="1002" class="mbr-after-navbar">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown">
+        <div class="container">
+
+            <div class="mbr-table">
+                <div class="mbr-table-cell">
+
+                    <div class="navbar-brand">
+                        <a href="index.html" class="mbri-speed mbr-iconfont mbr-iconfont-menu navbar-logo"></a>
+                        <a class="navbar-caption" href="index.html">fixxface</a>
+                    </div>
+
+                </div>
+                <div class="mbr-table-cell">
+
+                    <button class="navbar-toggler pull-xs-right" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
+                        <div class="hamburger-icon"></div>
+                    </button>
+
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-xl" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">OVERVIEW</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">FEATURES</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">HELP</a></li></ul>
+                    <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
+                        <div class="close-icon"></div>
+                    </button>
+
+                </div>
+            </div>
+
+        </div>
+    </nav>
+
+</section>
+
+<section id="menu-g4" data-rv-view="448">
+
+    <nav class="navbar navbar-dropdown">
         <div class="container">
 
             <div class="mbr-table">
@@ -50,7 +84,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link text-primary" href="news.html" aria-expanded="false" target="_blank">預約須知 ❍<br></a></li><li class="nav-item"><a class="nav-link link text-primary" href="page47.html" aria-expanded="false" target="_blank">關於我們 ✹<br></a></li><li class="nav-item"><a class="nav-link link text-primary" href="page44.html" aria-expanded="false" target="_blank">課程教學  ◒<br></a></li><li class="nav-item"><a class="nav-link link text-primary" href="products.html" aria-expanded="false">產品販售 ☁<br></a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">HELP</a><div class="dropdown-menu"><a class="dropdown-item" href="http://forums.mobirise.com/">Forum</a><a class="dropdown-item" href="https://mobirise.com/">Tutorials</a><a class="dropdown-item" href="https://mobirise.com/">Contact us</a></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="https://mobirise.com/">DOWNLOAD</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link text-primary" href="news.html" aria-expanded="false" target="_blank">預約須知 ❍<br></a></li><li class="nav-item"><a class="nav-link link text-primary" href="page47.html" aria-expanded="false" target="_blank">關於我們 ✹<br></a></li><li class="nav-item"><a class="nav-link link text-primary" href="page44.html" aria-expanded="false" target="_blank">課程教學  ◒<br></a></li><li class="nav-item"><a class="nav-link link text-primary" href="#" aria-expanded="true">產品販售 ☁<br></a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">HELP</a><div class="dropdown-menu"><a class="dropdown-item" href="http://forums.mobirise.com/">Forum</a><a class="dropdown-item" href="https://mobirise.com/">Tutorials</a><a class="dropdown-item" href="https://mobirise.com/">Contact us</a></div></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="true">HELP</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="https://mobirise.com/">DOWNLOAD</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -63,7 +97,7 @@
 
 </section>
 
-<section class="mbr-section mbr-after-navbar" id="msg-box5-am" data-rv-view="400" style="background-color: rgb(255, 255, 255); padding-top: 160px; padding-bottom: 0px;">
+<section class="mbr-section" id="msg-box5-am" data-rv-view="400" style="background-color: rgb(255, 255, 255); padding-top: 160px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -294,11 +328,11 @@
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/web/assets/bootstrap4-migrate/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
+  <script src="assets/dropdown/js/script.min.js"></script>
+  <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/masonry/masonry.pkgd.min.js"></script>
   <script src="assets/imagesloaded/imagesloaded.pkgd.min.js"></script>
   <script src="assets/bootstrap-carousel-swipe/bootstrap-carousel-swipe.js"></script>
-  <script src="assets/dropdown/js/script.min.js"></script>
-  <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/mobirise-gallery/player.min.js"></script>
   <script src="assets/mobirise-gallery/script.js"></script>
