create github pages

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="true">HELP</a><div class="dropdown-menu"><a class="dropdown-item" href="https://mobirise.com/">Contact us</a></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="news.html">預約須知 ❍</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="page47.html">關於我們 ✹</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="page44.html">課程教學 ◒</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="products.html">產品販售 ☁</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">HELP</a><div class="dropdown-menu"><a class="dropdown-item" href="https://mobirise.com/">Contact us</a></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="news.html">預約須知 ❍</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="page47.html">關於我們 ✹</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="page44.html">課程教學 ◒</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="products.html">產品販售 ☁</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -90,17 +90,18 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-a5" data-rv-view="1377" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
-
+<section class="mbr-section mbr-section__container article" id="header3-gi" data-rv-view="2013" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><p>IG: fixxface<br></p></div>
+            <div class="col-xs-12">
+                <h3 class="mbr-section-title display-2">IG: fixxface</h3>
+                
+            </div>
         </div>
     </div>
-
 </section>
 
-<section class="mbr-section mbr-section__container" id="buttons1-9z" data-rv-view="1379" style="background-color: rgb(193, 193, 193); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container" id="buttons1-9z" data-rv-view="1379" style="background-color: rgb(34, 34, 34); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -127,7 +128,7 @@
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-1b" data-rv-view="1385" style="background-color: rgb(255, 255, 255); padding-top: 0.875rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
-        <p>- 高雄 休修臉 美學 -<br>since2017<br><br></p>
+        <p>✦&nbsp;高雄 休修臉 美學&nbsp;✦<br>since2017<br><br></p>
     </div>
 </footer>
 
