create github pages

--- a/page19.html
+++ b/page19.html
@@ -63,7 +63,7 @@
 
 <section id="menu-g4" data-rv-view="278">
 
-    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
+    <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
