--- a/page40.html
+++ b/page40.html
@@ -31,7 +31,7 @@
   
   <section id="menu-g4" data-rv-view="733">
 
-    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
+    <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
