create github pages

--- a/page29.html
+++ b/page29.html
@@ -60,7 +60,17 @@
 
 </section>
 
-<section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-aq" data-rv-view="450" style="background-image: url(assets/images/-1-1-596x842.jpg); padding-top: 80px; padding-bottom: 40px;">
+<section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-gp" data-rv-view="3188" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 lead">&nbsp;</div>
+        </div>
+    </div>
+
+</section>
+
+<section class="mbr-section article mbr-parallax-background" id="msg-box8-aq" data-rv-view="450" style="background-image: url(assets/images/-1-1-596x842.jpg); padding-top: 80px; padding-bottom: 40px;">
 
     
     <div class="container">
