--- a/page32.html
+++ b/page32.html
@@ -77,7 +77,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <h3 class="mbr-section-title display-2"></h3>
+                <h3 class="mbr-section-title display-2">&nbsp;</h3>
                 <p class="mbr-section-subtitle"><br>［ 膠原蛋白逆齡童顏療程 ]<br>更多作品請至INSTAGRAM:FIXXFACE</p>
             </div>
         </div>
@@ -206,7 +206,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <h3 class="mbr-section-title display-2"></h3>
+                <h3 class="mbr-section-title display-2">&nbsp; &nbsp;</h3>
                 <p class="mbr-section-subtitle"><br><br></p>
             </div>
         </div>
