--- a/page5.html
+++ b/page5.html
@@ -60,7 +60,17 @@
 
 </section>
 
-<section class="mbr-section mbr-after-navbar" id="pricing-table2-1v" data-rv-view="51" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 0px;">
+<section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-gk" data-rv-view="3109" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 lead"><p>&nbsp;</p></div>
+        </div>
+    </div>
+
+</section>
+
+<section class="mbr-section" id="pricing-table2-1v" data-rv-view="51" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 0px;">
 
     
 
