--- a/page9.html
+++ b/page9.html
@@ -60,7 +60,17 @@
 
 </section>
 
-<section class="mbr-section mbr-after-navbar" id="pricing-table2-1w" data-rv-view="83" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 120px;">
+<section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-gn" data-rv-view="3115" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 lead"><p>&nbsp;</p></div>
+        </div>
+    </div>
+
+</section>
+
+<section class="mbr-section" id="pricing-table2-1w" data-rv-view="83" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 120px;">
 
     
 
@@ -69,7 +79,7 @@
           <div class="row">
               <div class="col-xs-12 text-xs-center">
                   <h3 class="mbr-section-title display-2">煥膚專區</h3>
-                  <p class="mbr-section-subtitle"></p>
+                  <p class="mbr-section-subtitle">&nbsp;</p>
               </div>
           </div>
       </div>
