--- a/page27.html
+++ b/page27.html
@@ -208,7 +208,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-md-4 lead"><p><br></p><p><br></p></div>
-            <div class="col-xs-12 col-md-4 lead"></div>
+            <div class="col-xs-12 col-md-4 lead">&nbsp; &nbsp;</div>
             <div class="col-xs-12 col-md-4 lead">&nbsp; &nbsp;</div>
         </div>
     </div>
