--- a/page39.html
+++ b/page39.html
@@ -143,7 +143,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"></div>
+            <div class="col-xs-12 lead">&nbsp;</div>
         </div>
     </div>
 
