--- a/page7.html
+++ b/page7.html
@@ -60,7 +60,17 @@
 
 </section>
 
-<section class="mbr-section mbr-after-navbar" id="pricing-table2-1t" data-rv-view="69" style="padding-top: 40px; padding-bottom: 160px;">
+<section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-gm" data-rv-view="3113" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 lead"><p>&nbsp;</p></div>
+        </div>
+    </div>
+
+</section>
+
+<section class="mbr-section" id="pricing-table2-1t" data-rv-view="69" style="padding-top: 40px; padding-bottom: 160px;">
 
     
 
