create github pages

--- a/page35.html
+++ b/page35.html
@@ -28,7 +28,7 @@
 </head>
 <body>
   
-  <section id="ext_menu-by" data-rv-view="1043" class="mbr-after-navbar">
+  <section id="ext_menu-by" data-rv-view="31" class="mbr-after-navbar">
 
     <nav class="navbar navbar-dropdown">
         <div class="container">
@@ -61,7 +61,7 @@
 
 </section>
 
-<section id="menu-g4" data-rv-view="577">
+<section id="menu-g4" data-rv-view="38">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -94,14 +94,14 @@
 
 </section>
 
-<section class="mbr-section" id="msg-box5-bz" data-rv-view="572" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 40px;">
+<section class="mbr-section" id="msg-box5-bz" data-rv-view="33" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 0px;">
 
     
     <div class="container">
         <div class="row">
             <div class="mbr-table-md-up">
 
-              <div class="mbr-table-cell mbr-right-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 38%;">
+              <div class="mbr-table-cell mbr-right-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 54%;">
                   <div class="mbr-figure"><img src="assets/images/img-7411-1400x2489.jpg"></div>
               </div>
 
@@ -112,7 +112,7 @@
                   <h3 class="mbr-section-title display-2"><div><br></div><div>Mother's Day activities</div></h3>
                   <div class="lead">
 
-                    <p></p><p>2020 4/25-5/10<br>---<br>母親節活動 <br>母親節優惠<br>---<br><br>活動期間<br>獨家膠蛋白逆齡童顏療程<br>療程單堂 $2500 &nbsp;<br>拍照打卡寫評論標記我們<br>就可以享有2199優惠體驗價<br>（再贈送一片面膜）<br>療程可以買堂數單人最多五堂<br><br>臉部保養所有療程<br>&nbsp; &nbsp; 加購黃金軟膜只要$199元（原價399）<br>&nbsp; &nbsp; &nbsp; &nbsp;加購藍藻舒緩膜只要$150元（原價399）</p><p>角蛋白卷販售特惠限定 <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;買五張送一張 (一張1380)⠀⠀⠀⠀⠀⠀⠀⠀⠀<br>（使用期限4/25-9/25）<br>角蛋白卷使用方式為認卷不認人<br>卷要保管好唷了☺️<br></p><p></p>
+                    <p>2021/4/26-5/30<br>━━━━━●─────── 5:20<br>⇆ ◁ ❚❚ ▷↻<br><br>𝑴𝒂𝒚 𝑰 𝒍𝒐𝒗𝒆 𝒚𝒐𝒖｜ 在五月，讓我呵護你<br>母親節活動 母親節優惠<br><br><br>✨🔥Top1🔥✨<br>奈美極音速 儀器療程 優惠方案<br>（活動期間內不限次數使用 約的到都可享優惠）<br><br>Ⓐ 煥顏美白提亮療程 優惠 $2799 (原價 $3600)<br>Ⓑ 全臉拉提緊緻療程 優惠 $3500 (原價 $4500)<br>Ⓒ 3D消脂小臉療程 優惠 $7999/10cc (原價 $10000)<br>Ⓓ天使童顏澎潤療程 優惠 $7999/10cc (原價 $10000)<br><br>加碼活動獨家女神套餐<br>A+B<br>原價 $8000 活動優惠$6000<br><br></p><p>✨🪞Top2🪞✨<br>眉毛塑型原價$3600 優惠$1800<br>兩人同行 再折$602(單人$1499)<br><br>角蛋白美睫 優惠1380<br>兩人同行 再折$400 （單人$1180)<br><br>套餐組合<br>眉毛塑型+角蛋白美睫<br>1'+1'套餐優惠= $2599<br><br>+加購睫毛養護增長修護液優惠$1299(原價1580)<br>限量20組<br></p><p>✨🦋 Top3 🦋✨<br>任一臉部保養 升級療程<br>+加購黃金軟膜只要$199元（原價399）<br>+加購藍藻舒緩膜只要$199元（原價399）<br>+加購紅寶石軟膜只要$299元（原價499）<br></p><p></p>
 
                   </div>
 
@@ -128,7 +128,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-c0" data-rv-view="575" style="background-color: rgb(255, 255, 255); padding-top: 0.875rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-c0" data-rv-view="36" style="background-color: rgb(255, 255, 255); padding-top: 0.875rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>✦&nbsp;高雄 休修臉 美學&nbsp;✦<br>since2017<br><br></p>
