--- a/page10.html
+++ b/page10.html
@@ -28,7 +28,7 @@
 </head>
 <body>
   
-  <section id="ext_menu-5a" data-rv-view="961" class="mbr-after-navbar">
+  <section id="ext_menu-5a" data-rv-view="118">
 
     <nav class="navbar navbar-dropdown">
         <div class="container">
@@ -61,40 +61,7 @@
 
 </section>
 
-<section id="menu-g4" data-rv-view="136">
-
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
-        <div class="container">
-
-            <div class="mbr-table">
-                <div class="mbr-table-cell">
-
-                    <div class="navbar-brand">
-                        <a href="https://line.me/R/ti/p/%40llr0044b" target="_blank" class="navbar-logo"><img src="assets/images/img-8456-128x128.jpg" alt="Mobirise"></a>
-                        <a class="navbar-caption text-black" href="index.html">fixxface.</a>
-                    </div>
-
-                </div>
-                <div class="mbr-table-cell">
-
-                    <button class="navbar-toggler pull-xs-right hidden-md-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
-                        <div class="hamburger-icon"></div>
-                    </button>
-
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">HELP</a><div class="dropdown-menu"><a class="dropdown-item" href="https://mobirise.com/">Contact us</a></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="news.html">預約須知 ❍</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="page47.html">關於我們 ✹</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="page44.html">課程教學 ◒</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="products.html">產品販售 ☁</a></li></ul>
-                    <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
-                        <div class="close-icon"></div>
-                    </button>
-
-                </div>
-            </div>
-
-        </div>
-    </nav>
-
-</section>
-
-<section class="mbr-section mbr-section__container article" id="header3-2n" data-rv-view="126" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2n" data-rv-view="120" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -105,7 +72,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-54" data-rv-view="128" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 0px;">
+<section class="mbr-section article mbr-section__container" id="content2-54" data-rv-view="122" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 0px;">
 
     <div class="container">
         <div class="row">
@@ -115,7 +82,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-55" data-rv-view="130" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-55" data-rv-view="124" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -125,7 +92,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-58" data-rv-view="132" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content2-58" data-rv-view="126" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -135,7 +102,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="buttons1-59" data-rv-view="134" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container" id="buttons1-59" data-rv-view="128" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
