--- a/page19.html
+++ b/page19.html
@@ -28,7 +28,7 @@
 </head>
 <body>
   
-  <section id="ext_menu-6m" data-rv-view="967" class="mbr-after-navbar">
+  <section id="ext_menu-6m" data-rv-view="278">
 
     <nav class="navbar navbar-dropdown">
         <div class="container">
@@ -61,40 +61,7 @@
 
 </section>
 
-<section id="menu-g4" data-rv-view="316">
-
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
-        <div class="container">
-
-            <div class="mbr-table">
-                <div class="mbr-table-cell">
-
-                    <div class="navbar-brand">
-                        <a href="https://line.me/R/ti/p/%40llr0044b" target="_blank" class="navbar-logo"><img src="assets/images/img-8456-128x128.jpg" alt="Mobirise"></a>
-                        <a class="navbar-caption text-black" href="index.html">fixxface.</a>
-                    </div>
-
-                </div>
-                <div class="mbr-table-cell">
-
-                    <button class="navbar-toggler pull-xs-right hidden-md-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
-                        <div class="hamburger-icon"></div>
-                    </button>
-
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">HELP</a><div class="dropdown-menu"><a class="dropdown-item" href="https://mobirise.com/">Contact us</a></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="news.html">預約須知 ❍</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="page47.html">關於我們 ✹</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="page44.html">課程教學 ◒</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="products.html">產品販售 ☁</a></li></ul>
-                    <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
-                        <div class="close-icon"></div>
-                    </button>
-
-                </div>
-            </div>
-
-        </div>
-    </nav>
-
-</section>
-
-<section class="mbr-section mbr-section__container article" id="header3-6n" data-rv-view="286" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-6n" data-rv-view="280" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -105,7 +72,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6o" data-rv-view="288" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-6o" data-rv-view="282" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -115,7 +82,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6p" data-rv-view="290" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-6p" data-rv-view="284" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -125,7 +92,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6q" data-rv-view="292" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-6q" data-rv-view="286" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -135,7 +102,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6r" data-rv-view="294" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-6r" data-rv-view="288" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -145,7 +112,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6s" data-rv-view="296" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-6s" data-rv-view="290" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -155,7 +122,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6t" data-rv-view="298" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-6t" data-rv-view="292" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -165,7 +132,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6v" data-rv-view="300" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-6v" data-rv-view="294" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -175,7 +142,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6w" data-rv-view="302" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-6w" data-rv-view="296" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -185,7 +152,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-71" data-rv-view="304" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-71" data-rv-view="298" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -202,7 +169,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6x" data-rv-view="306" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-6x" data-rv-view="300" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -212,7 +179,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6y" data-rv-view="308" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-6y" data-rv-view="302" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -222,7 +189,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6z" data-rv-view="310" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-6z" data-rv-view="304" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -232,7 +199,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-70" data-rv-view="312" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-70" data-rv-view="306" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -242,7 +209,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-74" data-rv-view="314" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-74" data-rv-view="308" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
